duniverse/menhirLib.20200211/test/static/good/private-and-public-3.mly
%start<int> b
%%

b: a c {}
