duniverse/menhirLib.20200211/test/static/bad/multiple-type-definition-modules-2.mly
%type<bool> a
%start<int> b
%%
b: a {}
%public a: {}
